# psychic-octo-guacamole

./: CMakeLists.txt  README.md  bench.py  bench2.py  cognex.py  contrast.py  decode.py  decodeplate.py  fast.py  fastdecode.py  main.cpp  read.py  reader.py  test.py  watch.py  yolodecode.py  zxing.py  zxingcli.py
